<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkProvider">
    <TextView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Welcome"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="#000000"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="50dp"
        />
    <Button
        android:id="@+id/AppliedJobs"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:text="@string/JobStatus"
        android:textStyle="bold"
        android:textColor="#000000"
        android:backgroundTint="#FFC107"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/banner"
        ></Button>

    <Button
        android:id="@+id/Search_Job"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="#2196F3"
        android:text="@string/SearchJobs"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppliedJobs">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>